fixed mobile design flaw (gap under img)

--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,10 @@ body{
 	color: white;
 }
 
+@media screen and (min-width: 426px) and () {
+
+}
+
 @media screen and (min-width: 320px) and (max-width: 425px){
 	#jukebox {
 		position: relative;
@@ -18,9 +22,9 @@ body{
 
 	#jukebox_bg {
 		position: absolute;
-		top: 5%;
+		top: 3%;
 		width: 80%;
-		height: 86%;
+		height: 92%;
 	}
 
 	#div_upload {
@@ -37,7 +41,7 @@ body{
 		top: 0;
 		right: 0;
 		width: 20%;
-		height: 5%;
+		height: 3%;
 		background-color: #F4FFFD;
 		color: #011936;
 	}
@@ -47,7 +51,7 @@ body{
 		top: 0;
 		left: 0;
 		width: 80%;
-		height: 5%;
+		height: 3%;
 		overflow-x: hidden;
 		overflow-y: hidden;
 		background-color: #465362;
@@ -67,7 +71,7 @@ body{
 		position: absolute;
 		bottom: 0;
 		right: 0;
-		height: 95%;
+		height: 97%;
 		width: 20%;
 	}
 
